--- a/SmartEcoA/ClientApp/src/i18n/messages.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.xlf
@@ -636,7 +636,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/postdatadivideds/details.component.html</context>
-          <context context-type="linenumber">16</context>
+          <context context-type="linenumber">18</context>
         </context-group>
       </trans-unit>
       <trans-unit id="EditUser" datatype="html">
@@ -1723,6 +1723,17 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/postdatadivideds/details.component.html</context>
           <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="PostData" datatype="html">
+        <source>Post Data</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/postdatadivideds/details.component.html</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/postdatadivideds/details.component.html</context>
+          <context context-type="linenumber">14</context>
         </context-group>
       </trans-unit>
     </body>
