--- a/SmartEcoA/ClientApp/src/i18n/messages.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.xlf
@@ -402,6 +402,18 @@
           <context context-type="sourcefile">app/carpostdataautotests/list.component.html</context>
           <context context-type="linenumber">34</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/delete.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/delete.component.html</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="AreYouSureDeleteThisRecord" datatype="html">
         <source>Are you sure to delete this record?</source>
@@ -447,6 +459,10 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/delete.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/delete.component.html</context>
           <context context-type="linenumber">3</context>
         </context-group>
       </trans-unit>
@@ -580,6 +596,18 @@
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
           <context context-type="linenumber">133</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/delete.component.html</context>
+          <context context-type="linenumber">7</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="Filter" datatype="html">
         <source>Filter</source>
@@ -637,6 +665,10 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/list.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
@@ -732,6 +764,10 @@
           <context context-type="sourcefile">app/carpostdataautotests/list.component.html</context>
           <context context-type="linenumber">32</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">32</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="Edit" datatype="html">
         <source>Edit</source>
@@ -777,6 +813,10 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/list.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
           <context context-type="linenumber">33</context>
         </context-group>
       </trans-unit>
@@ -859,6 +899,10 @@
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
           <context context-type="linenumber">62</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="EditUser" datatype="html">
         <source>Edit user</source>
@@ -912,6 +956,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
           <context context-type="linenumber">132</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">35</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironments" datatype="html">
@@ -1132,6 +1180,21 @@
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="CarPostAnalytics" datatype="html">
+        <source>Car Post Analytics</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/administration/administration.component.html</context>
+          <context context-type="linenumber">55</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/administration/administration.component.html</context>
+          <context context-type="linenumber">54</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/index.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="Background" datatype="html">
         <source>Background</source>
         <context-group purpose="location">
@@ -1244,6 +1307,14 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/create.component.html</context>
           <context context-type="linenumber">132</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">35</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Name" datatype="html">
@@ -2225,6 +2296,22 @@
           <context context-type="sourcefile">app/postdataavgs/list.component.html</context>
           <context context-type="linenumber">6</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="DateTime" datatype="html">
         <source>Date and Time</source>
@@ -2487,6 +2574,22 @@
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
           <context context-type="linenumber">7</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="CreateNewCarModelSmokeMeter" datatype="html">
         <source>Create a new Car Model (Smoke Meter)</source>
@@ -2551,6 +2654,14 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
           <context context-type="linenumber">19</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">20</context>
         </context-group>
       </trans-unit>
       <trans-unit id="ApprovalMark" datatype="html">
@@ -3530,6 +3641,98 @@
         <source>Car Post Data details (Auto Test)</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="Measurement" datatype="html">
+        <source>Measurements count</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
+          <context context-type="linenumber">7</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="Exceeding" datatype="html">
+        <source>Exceeding count</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/list.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">29</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">29</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
+          <context context-type="linenumber">9</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="CreateNewCarPostAnalytic" datatype="html">
+        <source>Create a new Car Post Analytic</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="DateRequired" datatype="html">
+        <source>Date is required</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="MeasurementRequired" datatype="html">
+        <source>Measurements count is required</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ExceedingRequired" datatype="html">
+        <source>Exceeding count is required</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/create.component.html</context>
+          <context context-type="linenumber">30</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">30</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="EditCarPostAnalytic" datatype="html">
+        <source>Edit new Car Post Analytic</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/edit.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="CarPostAnalyticDetails" datatype="html">
+        <source>Car Post Analytic details</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostanalytics/details.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
